--- a/Web/src/styles/basics/_input.scss
+++ b/Web/src/styles/basics/_input.scss
@@ -127,4 +127,7 @@ input::placeholder {
 .hint-text {
     font-style: italic;
     font-size: 11px;
+    display: inline-block;
+    width: 400px;
+    vertical-align: middle;
 }
