--- a/Web/src/styles/basics/_table.scss
+++ b/Web/src/styles/basics/_table.scss
@@ -49,7 +49,7 @@ table {
 }
 
 .grid tbody tr:nth-child(2n + 1) {
-  background-color: #fafafa;
+  background-color: #e2e2e269;
 }
 .grid tbody {
   height: calc(100vh - 200px);
